--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root {
+    --boo: rgb(58, 23, 116);
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -12,24 +16,46 @@ body {
     height: 100vh;
     background-image: url(Fundo.png);
     background-size: cover;
+    background-repeat: no-repeat;
     background-position: -5px;
     font-family: 'Daydream';
 }
 
 .mini-mono:hover{
-    filter: drop-shadow(0px 0px 20px rgb(58, 23, 116));
+    filter: drop-shadow(0px 0px 20px var(--boo));
 }
 
 .container {
-    display: flex;
+    display: grid;
+    grid-template-rows: 33%;
+}
+
+.principal {
+   
     justify-content: center;
     align-items: center;
 }
 
-.tabela-principal {
-    outline: 8px double #000000;
+header {
+    display: flex;
+    color: #fff;
+    background-color: #000;
+    border-style: solid;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 6em;
 }
 
-.tabela-principal caption {
+.tabela-principal, caption {
+    text-align: center;
+    color: #fff;
     background-color: #000;
+    outline: 8px double #fff;
+    filter: drop-shadow(0px 0px 5px var(--boo))
+}
+
+tr:hover {
+    color: powderblue ;
 }
